<resources>
    <string name="app_name">Почитай-ка</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Профиль</string>
    <string name="title_notifications">Ваш личный рекорд 12 дней!</string>
    <string name="title2">Скоро тут будут ваши достижения!</string>
    <string name="zeroTime">00</string>
    <string name="timeSeparator">:</string>
    <string name="descriptionPicture">Тут должны быть цветочки :)</string>
    <string name="title_goal">Моя цель:</string>
    <string name="title_no_messages">Не беспокоить</string>
    <string name="title_from">С</string>
    <string name="title_to">по</string>
    <string name="title_save">Сохранить</string>

    <string name="title_pn">ПН</string>
    <string name="title_vt">ВТ</string>
    <string name="title_sr">СР</string>
    <string name="title_cht">ЧТ</string>
    <string name="title_pt">ПТ</string>
    <string name="title_sb">СБ</string>
    <string name="title_vs">ВС</string>

    <string name="mess1">Вы читали 7 дней подряд! До нового рекорда 5 дней!</string>
</resources>